--- a/brief1/style.css
+++ b/brief1/style.css
@@ -1,58 +1,88 @@
+ul {
+    display: flex;
+    list-style-type: none;
+}
 
-ul{
-    display:flex;
-    list-style-type:none;
+ol {
+    display: flex;
+    list-style-type: none;
 }
-ol{
-    display:flex;
-    list-style-type:none;
-}
-a{
+
+a {
     color: black;
     text-decoration: none;
-    font-weight:bold;
-}
-a:hover{
-    color: rgb(0, 68, 255);
-    text-decoration:underline;
-
-}
-ul li{
-    padding: 20PX;
-}
-ol li{
-    padding: 20PX;
-}
-h1{
-    font-weight: bold;  
-}
-p{
     font-weight: bold;
 }
-.cards{
+
+a:hover {
+    color: rgb(0, 68, 255);
+    text-decoration: underline;
+    transition: all 300ms ease-in-out;
+
+}
+
+ul li {
+    padding: 20PX;
+}
+
+ol li {
+    padding: 20PX;
+}
+
+h1 {
+    font-weight: bold;
+}
+
+p {
+    font-weight: bold;
+}
+
+.cards {
     margin-left: 20PX;
     border: 2PX rgb(0, 0, 0) solid;
     width: 200PX;
     height: 350PX;
     padding: 2%;
-    
+    transition: all 400ms ease-in-out;
+
 }
-#RR{
+
+.cards:hover {
+    transform: scale(1.02);
+}
+
+section {
+    padding: 10px;
+}
+
+.RR {
     color: rgb(167, 167, 167);
 }
-#SA{
+
+.SA {
     color: rgb(0, 212, 78);
 }
-.card{
+
+.card {
     margin-top: 7PX;
     text-align: center;
 
 }
+
 .big {
-    display:flex;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 
 }
-.card1{
+
+.nav {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card1 {
     margin-top: 7PX;
     text-align: center;
     background-color: aqua;
@@ -61,14 +91,16 @@ p{
     border: 34PX rgb(0, 217, 255) solid;
 
 }
-.box{
-    
+
+.box {
+
 
     text-align: center;
     background-color: aqua;
     width: 100%;
     height: 160PX;
-    }
-.prodc{
+}
+
+.prodc {
     text-align: center;
 }
