--- a/brief4/style.css
+++ b/brief4/style.css
@@ -6,7 +6,7 @@
 i {
     
     margin-right: 10px;
-    color: #fff;
+    color: rgb(145, 145, 145);
 
 }
 
@@ -44,10 +44,12 @@ nav ol li a {
     display: flex;
 }
 a:hover {
-    color: rgb(255, 255, 255);
+    color: rgb(232, 232, 232);
     transition: all 300ms ease-in-out;
 
 }
+
+
 .logo{
     width: 20%;
     margin-right: 20px;
@@ -211,4 +213,22 @@ nav ul li a:hover::before{
         display:flex ;
         justify-content: center;
     }
+}
+
+.pg{
+    margin-top: 100px;
+    width: 50px;
+    height: 50px;
+    border: solid rgb(62, 62, 62) 2px;
+    background-color: rgb(88, 87, 87);
+}
+.pg h3{
+    text-align: center;
+    margin-top: 15px;
+    color: #fff;
+}
+.pages{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
