--- a/brief4/style.css
+++ b/brief4/style.css
@@ -4,13 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 i {
-    
     margin-right: 10px;
     color: rgb(145, 145, 145);
-
+    font-size: 22px;
 }
-
-
 
 ul {
     display: flex;
@@ -43,13 +40,11 @@ nav ol li a {
 .li_nav{
     display: flex;
 }
-a:hover {
-    color: rgb(232, 232, 232);
+nav ul li:hover i{
+    color: rgb(215, 215, 215);
     transition: all 300ms ease-in-out;
 
 }
-
-
 .logo{
     width: 20%;
     margin-right: 20px;
@@ -63,15 +58,48 @@ ol li {
     padding: 20px 5px 20px 5px;
 }
 
-h1 {
+section h1 {
     font-weight: bold;
     color: rgb(129, 129, 129);
 }
-h1:hover{
+section h1:hover{
     color: aliceblue;
     transition: all 150ms ease-in-out;
 
 }
+.eff{
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+section h1{
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+}
+
+
+section h1::before{
+    content:'';
+    position: absolute;
+    width:0%;
+    height: 1px;
+    bottom: -3px;
+    left: 0;
+    background-color: #fff;
+    transition:all  0.4s ease-in-out;
+   
+}
+section h1:hover::before{
+    width: 100%;
+    
+}
+.eff:hover i {
+font-size: 35px;
+transition: all 150ms ease-in-out;
+cursor: pointer;
+} 
+
 
 p {
     font-weight: bold;
@@ -94,7 +122,7 @@ p {
 
 .cards:hover {
     transform: scale(1.02);
-    box-shadow: 0PX 0PX 7PX rgba(248, 255, 57, 0.648) ;
+    box-shadow: 0PX 0PX 7PX rgba(192, 192, 192, 0.648) ;
 }
 
 section {
@@ -231,4 +259,13 @@ nav ul li a:hover::before{
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+
+.pg:hover{
+    background-color: rgb(33, 33, 33);
+
+}
+.pg:active{
+    background-color: rgb(130, 130, 130);
+
 }
