--- a/brief4/style.css
+++ b/brief4/style.css
@@ -269,3 +269,36 @@ nav ul li a:hover::before{
     background-color: rgb(130, 130, 130);
 
 }
+
+
+.fo1{
+    background-color: rgba(25, 25, 25, 0.936);
+    margin-top: 0px;
+    margin-bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.fp{
+    margin: 0px;
+    color: rgb(175, 175, 175);
+    padding: 20px;
+}
+
+.fo1 button {
+    width: 100px;
+    height: 40px;
+    border-radius: 15px;
+    background-color: rgb(84 84 84);
+    color: rgb(207, 207, 207);
+    border-style: none;
+}
+.fo1 button:hover{
+    background-color: rgb(220, 220, 220);
+    color: rgb(0, 0, 0);
+    transition: all 300ms ease-in-out;
+}
+.fp a{
+    color: #fff;
+    text-decoration: none;
+}
